# doki

./: .gitignore  README.md  index.html  normadoc-design-system.md  package.json
.atl/: .skill-registry.cache.json  skill-registry.md
docs/: analisis-por-secciones.md  feedback-format.md  mvp-use-cases.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/AppShell/: AppShell.tsx
src/components/Landing/: Landing.tsx
src/components/Wizard/: Step1.tsx  Step2.tsx  Step3.tsx  Wizard.tsx
src/components/Workspace/: Workspace.tsx
src/components/ui/: Button.tsx  Chip.tsx
src/context/: ProjectContext.tsx
src/services/: api.ts  docx.ts  docxView.ts  health.ts
src/types/: api-gen.ts  api.ts  highlights.ts  mapping.ts
