[package]
name = "doki"
version = "0.1.0"
description = "Doki — Asistente de escritura académica local"
authors = ["Deyvi Oscar Sánchez Gonzales", "Max Anderson Ttito Pomacanchari"]
edition = "2021"

[lib]
name = "doki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

